# serena

./: CMakeLists.txt  LICENSE  README.md  esphome-visor.yaml  nodered-microscope.json  sdkconfig.defaults  sdkconfig.defaults.lolin  sdkconfig.defaults.stabby
hardware/solder/: fluidnc-soldering-iron.yaml  stabby.scad  stabby_carriage.stl  stabby_carriage_qi.stl  stabby_frame.stl  stabby_frame_qi.stl  stabby_idler_bracket.stl  stabby_motor_bracket.stl
main/: CMakeLists.txt  bsp_lolin.c  commandset.c  commandset.h  comms.c  comms.h  main.c  mqtt.c  mqtt.h  serena_config.h
